review: Setup projects with h2 and first review comments